# fastapi-users

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
secrets/: README.md
server/: main.py
server/config/: factory.py
server/config/environments/: base.py  staging.py
server/database/: users.py
server/models/: __init__.py  users.py
server/routes/: users.py
server/utils/: dependencies.py  startup.py
